<?xml version="1.0"?>
<package>
  <name>car_interface_rpi</name>
  <version>0.0.1</version>
  <description>Node that converts human-readable commands for a car into machine-understandable values. To be moved to Rpi</description>

  <maintainer email="TODO@TODO.TODO">TODO</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <!-- <build_depend>adas_common</build_depend> -->
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <!-- <run_depend>adas_common</run_depend>
  <run_depend>dynamic_reconfigure</run_depend> -->

</package>
